Fixed weird spacing issue; too much space on right side

--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,13 @@ body {
 	width:            80%;
 	margin:           auto;
 	margin-top:       75px;
-	padding:          10px 20px 10px 20px;
+	padding:          10px 0px 10px 0px;
 	background-color: #ffffff;
 	border-radius:    8px;
 }
 
-* {
-	font-family: "Work Sans";
+p {
+	font-family: 'Work Sans', sans-serif;
 	font-size: 1.05rem;
 	font-weight: 400;
 	line-height: 152%;
@@ -87,19 +87,6 @@ a {
 	width: 49%; 
 	overflow: hidden; 
 	
-}
-
-.famous_ppl_list {
-	display: flex;
-	text-align: center;
-	justify-content: space-between;
-	padding: 0;
-	list-style: none;
-}
-
-.famous_ppl_name_ch {
-	margin: 0;
-	font-weight: 700;
 }
 
 #text-container {
